# mewcode

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  PHASES.md  README.md  rustfmt.toml
.github/workflows/: rust.yml
crates/client/: Cargo.toml
crates/client/src/: config.rs  lib.rs  main.rs  net.rs
crates/client/src/runtime/: app.rs  mod.rs  update.rs  view.rs
crates/client/src/runtime/model/: cmd.rs  mod.rs  msg.rs  state.rs
crates/client/src/runtime/model/states/: home.rs  mod.rs  new_session.rs  session.rs  workspace.rs
crates/client/src/runtime/update/: canvas.rs  home.rs  mod.rs  new_session.rs  session.rs  stream.rs  workspace.rs
crates/client/src/runtime/view/: canvas.rs  home.rs  markdown.rs  mod.rs  new_session.rs  overlay.rs  session.rs  spinner.rs  theme.rs  toast.rs  tool_card.rs  workspace.rs
crates/client/tests/: canvas_screen.rs  home_screen.rs  mouse_msg_ignored.rs  net_models_timeout.rs  new_session_screen.rs  new_session_transitions.rs  prop_focus_cycle.rs  prop_mode_toggle.rs  prop_model_clamp.rs  prop_picker_pending.rs  prop_registry_fallback.rs  prop_registry_order.rs  prop_submit_carries.rs  prop_submit_inflight.rs  prop_submit_reject_ws.rs  prop_title_isolation.rs  screen_state.rs  session_scroll.rs  stream_commit.rs  tool_card.rs  update.rs  workspace_screen.rs
crates/client/tests/snapshots/: home_screen__empty_home.snap  new_session_screen__error_line.snap  new_session_screen__loaded_model_focused.snap  new_session_screen__loading_models.snap  new_session_screen__submitting.snap
crates/engine/: Cargo.toml
crates/engine/src/: config.rs  history.rs  langfuse.rs  lib.rs  memory.rs  provider.rs  trace.rs
crates/engine/src/agent/: mod.rs  prompt.rs  stream.rs
crates/engine/src/canvas/: io.rs  layout.rs  mod.rs
crates/engine/src/harness/: completion.rs  mod.rs  trace.rs
crates/engine/src/skills/: catalog.rs  config.rs  mod.rs  source.rs  view.rs
crates/engine/src/tools/: adapter.rs  glob.rs  list_directory.rs  memory.rs  mod.rs  read_file.rs  rig_adapter.rs  use_skill.rs
crates/engine/src/tools/fs/: edit_file.rs  glob.rs  list_directory.rs  mod.rs  read_file.rs  write_file.rs
crates/engine/src/tools/search/: mod.rs
crates/engine/src/tools/shell/: mod.rs
crates/engine/src/tools/skills/: mod.rs  skill_view.rs  use_skill.rs
crates/engine/tests/: agent_prompt.rs  canvas_io.rs  canvas_layout.rs  chat_turn_span.rs  config_resolution.rs  hello_smoke.rs  langfuse_batch.rs  memory_store.rs  memory_tool.rs  phase12_tools.rs  prop_failure_shape.rs  prop_last_user.rs  prop_no_key_leak.rs  prop_no_user_no_call.rs  prop_provider_routing.rs  prop_reply_concat.rs  prop_success_shape.rs  provider_agent_invocation.rs  skill_smoke.rs  skills_load_config.rs  skills_loader.rs  tool_calling_e2e.rs  tools_basics.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: canvas.rs  event.rs  lib.rs  message.rs  mode.rs  model.rs  routes.rs  skill.rs  tool.rs
crates/protocol/tests/: canvas.rs  model.rs  skill.rs  tool.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs  sse.rs
crates/server/src/routes/: canvas.rs  chat.rs  health.rs  memory.rs  mod.rs  models.rs  sessions.rs  storage.rs
crates/server/src/store/: fs.rs  mod.rs
crates/server/tests/: agent_tool_e2e.rs  backend_transparency.rs  canvas_routes.rs  chat_failure.rs  chat_persistence.rs  fs_atomic_write.rs  fs_store.rs  langfuse_otel_filter.rs  sessions_api.rs  storage_status.rs
docs/architecture-canvas/: README.md  hermes-loop-prompt.md  milestone-1-promptable-canvas.md  ui-aesthetic.md
docs/plans/: 2026-06-29-p14-3-theme-slash-mention.md
