[package]
name = "mewcode-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish.workspace = true

description = "axum backend for mewcode: filesystem session storage, SSE chat streaming, OpenCode Go proxy."

[[bin]]
name = "mewcode-server"
path = "src/main.rs"

[dependencies]
mewcode-protocol = { path = "../protocol" }
mewcode-engine = { path = "../engine" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }

clap = { workspace = true }
figment = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }

utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

reqwest = { workspace = true }
eventsource-stream = { workspace = true }
async-stream = "0.3"

rig-core = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
tempfile = { workspace = true }
proptest = { workspace = true }
